Upgrade to the tools API.